--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "config": "^3.3.1",
         "express": "^4.17.1",
         "express-validator": "^6.4.0",
+        "gravatar": "^1.8.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.14",
         "mongoose-unique-validator": "^2.0.3",
         "nodemon": "^2.0.3",
